2001-07-31  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* cmdline.n: Added manpage [446584].

2001-06-21  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* typedCmdline.tcl:
	* cmdline.tcl: Fixed dubious code reported by frink.

2000-05-03  Brent Welch <welch@scriptics.com>

	* cmdline.tcl: Changed cmdline::getopt to set boolean arguments to
	0 or 1 explicitly.  Previously it just set the value to "" if it
	was present, or did nothing.  This vfixes the -verbose command
	line bug in connect.

2000-04-07  Eric Melski  <ericm@scriptics.com>

	* typedCmdline.test: Changed sourcing bits at start of file to
	work better with updated file dependancies.

	* typedCmdline.tcl: Removed "package provide"; that should occur
	only in one file per package.  Reformatted function headers to
	comply with Tcl coding standard.  Renamed "cmdline::lsearch" to
	"cmdline::prefixSearch" to avoid confusion, and removed code thus
	made obsolete.

	* cmdline.tcl: Added call to source typedCmdline.tcl

2000-04-04  Ross Mohn  <rpmohn@panix.com>

	* typedCmdline.tcl: Added typed versions of getopt, getoptions,
	and usage. Types supported are all character classes available
	for the Tcl "string in" command.

	* typedCmdline.test: Added tests for typed procedures.

	* cmdline.tcl: Corrected some documentation errors and omissions.

2000-03-09  Eric Melski  <ericm@scriptics.com>

	* cmdline.test: Adapted tests to work with tcllib test framework.

1999-10-29  Scott Stanton  <stanton@scriptics.com>

	* cmdline.tcl: Fixed bug where options that contained regexp
	special characters would cause an error.  Cleaned up lots of
	messy code.  Added test suite.
